--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #222222;
   height: 100%;
   width: 100%;
 }
@@ -122,8 +122,7 @@ body {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1.35em;
   height: 300px;
   width: 30%;
   display: flex;
@@ -131,7 +130,15 @@ body {
   align-items: center;
 }
 
+.div-2 {
+    border-left: 1px solid #555555;
+    border-right: 1px solid #555555;
+    padding: 0 1em;
+} 
 
+span.uppercase {
+    text-transform: uppercase;
+}
 
 
 /* ==========================================================================
