--- a/css/main.css
+++ b/css/main.css
@@ -97,47 +97,44 @@ textarea {
 
 
 html {
-  background-color: #222222;
+  background-color: #222;
   height: 100%;
   width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 700;
   padding: 2em;
-  font-size: 1.25em;
+  color: #fff;
   height: 100%;
 }
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .div-1, 
 .div-2, 
 .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.35em;
-  height: 300px;
-  width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
+  line-height: 1.5em;
+  font-size: 1.25em;
+  height: auto; /* original height: 300px */
+  /* width: 30%; */
 }
 
-.div-2 {
-    border-left: 1px solid #555555;
-    border-right: 1px solid #555555;
-    padding: 0 1em;
-} 
-
-span.uppercase {
-    text-transform: uppercase;
+.wrapper span {
+    font-family: 'Lora', sans-serif;
+    font-size: 1.3em;
 }
 
 
@@ -220,6 +217,17 @@ span.uppercase {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+
+@media all and (min-width: 1200px) {
+    .div-1, .div-2, .div-3 {
+      flex-basis: 30%;
+    }
+
+    .div-1, .div-2 {
+      border-right: 1px solid #555;
+      padding-right: 30px;
+    }
+}
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
