--- a/css/main.css
+++ b/css/main.css
@@ -104,38 +104,73 @@ html {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 700;
-  padding: 2em;
+  font-size: 1.25em;
+  padding: 0em 2em;
   color: #fff;
-  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
+.flex-container {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  align-items: center;
+  max-width: 1200px;
 }
 
-.div-1, 
-.div-2, 
-.div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
+header,
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+header h1 {
+    font-family: 'Lora', sans-serif;
+    font-size: 3em;
+}
+
+main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #fff;
+}
+
+main p {
+    font-size: 1.35em;
+}
+
+.flex-items {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
   line-height: 1.5em;
-  font-size: 1.25em;
-  height: auto; /* original height: 300px */
-  /* width: 30%; */
+  font-size: 1em;
+  border-bottom: 1px solid #555;
 }
 
-.wrapper span {
+p span {
     font-family: 'Lora', sans-serif;
-    font-size: 1.3em;
 }
+
+footer {
+    border-top: 1px solid #fff;
+}
+
+ul {
+    display: flex;
+    justify-content: flex-start;
+    list-style: none;
+    padding-left: 0;
+}
+
+ul img {
+    width: 1em;
+    height: 1em;
+    padding: 5px 20px 0 0;
+}
+
 
 
 /* ==========================================================================
@@ -218,14 +253,22 @@ body {
    Modify as content requires.
    ========================================================================== */
 
-@media all and (min-width: 1200px) {
-    .div-1, .div-2, .div-3 {
+@media all and (max-width: 768px) {
+    body {
+        padding: 1em;
+    }
+}
+
+@media (min-width: 1200px) {
+    .flex-items {
       flex-basis: 30%;
+      border-bottom: none;
     }
 
-    .div-1, .div-2 {
+    #div-2 p {
+      border-left: 1px solid #555;
       border-right: 1px solid #555;
-      padding-right: 30px;
+      padding: 0 40px;
     }
 }
 
